--- a/WebDesign/index.html
+++ b/WebDesign/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1 style="text-align: center;">IIUM Venue Management System</h1>
         <p><a href="KICT.htm">Venues for KICT</a></p>
-         <p><a href="HS.htm"></a>Venues for HS building AHAS KIRKHS</p>
+         <p><a href="HS.htm">Venues for HS building AHAS KIRKHS</a></p>
     </body>
 
 </html>
