--- a/WebDesign/HS.htm
+++ b/WebDesign/HS.htm
@@ -6,8 +6,8 @@
         <meta name="description" content="KICT Venue">
     </head>
     <body>
-        <h1>KICT</h1>
-        <p>Management system for Kulliyyah of Information and Communication Technology.</p>
+        <h1>AHAS KIRKHS</h1>
+        <p>Management system for Kulliyyah of Islamic Revelead Knowledge and Human Science</p>
         
     </body>
 
