--- a/WebDesign/index.html
+++ b/WebDesign/index.html
@@ -7,8 +7,11 @@
     </head>
     <body>
         <h1 style="text-align: center;">IIUM Venue Management System</h1>
-        <p><a href="KICT.htm">Venues for KICT</a></p>
-         <p><a href="HS.htm">Venues for HS building AHAS KIRKHS</a></p>
+        <!--<p><a href="KICT.htm">Venues for KICT</a></p>-->
+        <button onclick="document.location='KICT.htm'">KICT Venues</button>
+
+        <!--<p><a href="HS.htm">Venues for HS building AHAS KIRKHS</a></p>-->
+        <button onclick="document.location='HS.htm'">AHAS KIRHS HS building Venues</button>
     </body>
 
 </html>
