--- a/WebDesign/index.html
+++ b/WebDesign/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <meta name="description" content="IIUM Venue Management System">
+        <link rel="stylesheet" href="web.css">
     </head>
     <body>
         <h1 style="text-align: center;">IIUM Venue Management System</h1>
@@ -12,6 +13,8 @@
 
         <!--<p><a href="HS.htm">Venues for HS building AHAS KIRKHS</a></p>-->
         <button onclick="document.location='HS.htm'">AHAS KIRHS HS building Venues</button>
+
+
     </body>
 
 </html>
