--- a/WebDesign/index.html
+++ b/WebDesign/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="web.css">
     </head>
     <body>
-        <h1 style="text-align: center;">IIUM Venue Management System</h1>
+        <h1 id="title">IIUM Venue Management System</h1>
         <!--<p><a href="KICT.htm">Venues for KICT</a></p>-->
         <button onclick="document.location='KICT.htm'">KICT Venues</button>
 
