Update Web Design

--- a/WebDesign/index.html
+++ b/WebDesign/index.html
@@ -8,13 +8,17 @@
     </head>
     <body>
         <h1 id="title">IIUM Venue Management System</h1>
-        <!--<p><a href="KICT.htm">Venues for KICT</a></p>-->
-        <button onclick="document.location='KICT.htm'">KICT Venues</button>
+        
+        <div class="venues">
+            <button onclick="document.location='KICT.htm'">KICT Venues</button>
 
-        <!--<p><a href="HS.htm">Venues for HS building AHAS KIRKHS</a></p>-->
-        <button onclick="document.location='HS.htm'">AHAS KIRHS HS building Venues</button>
+            <button onclick="document.location='HS.htm'">AHAS KIRHS HS building Venues</button>
 
+            <button onclick="document.location='IRK.htm'">AHAS KIRHS IRK building Venues</button>
 
+            <button onclick="document.location='KOE.htm'">KOE Venues</button>
+        </div>
+    
     </body>
 
 </html>
