--- a/WebDesign/KICT.htm
+++ b/WebDesign/KICT.htm
@@ -7,8 +7,10 @@
     </head>
     <body>
         <h1>KICT</h1>
-        <p>Venue Management system for Kulliyyah of Information and Communication Technology.</p>
-        
+        <div class="mainbody">
+            
+            <p>Venue Management system for Kulliyyah of Information and Communication Technology.</p>
+        </div>
     </body>
 
 </html>
