Major changes in design

--- a/WebDesign/KICT.htm
+++ b/WebDesign/KICT.htm
@@ -4,11 +4,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <meta name="description" content="KICT Venue">
+        <link rel="stylesheet" href="web.css">
     </head>
-    <body>
-        <h1>KICT</h1>
+    <body>  
+        <div id="home" onclick="document.location='index.html'">
+            <img src="img/IIUM.svg" alt="IIUMlogo" id="titlelogo">
+            <h1 id="title" style="text-align: left;">IIUM VMS</h1>
+        </div>
+        
         <div class="mainbody">
-            
+            <h1>KICT</h1>
             <p>Venue Management system for Kulliyyah of Information and Communication Technology.</p>
         </div>
     </body>
