Another major change

--- a/WebDesign/HS.htm
+++ b/WebDesign/HS.htm
@@ -6,7 +6,7 @@
         <meta name="description" content="KICT Venue">
     </head>
     <body>
-        <h1>AHAS KIRKHS</h1>
+        <h1>AHAS KIRKHS (HS building)</h1>
         <p>Management system for Kulliyyah of Islamic Revelead Knowledge and Human Science</p>
         
     </body>
