--- a/WebDesign/index.html
+++ b/WebDesign/index.html
@@ -22,9 +22,9 @@
         <div class="venues">
             <button onclick="document.location='KICT.htm'" class="kict">KICT<br>Venues</button>
 
-            <button onclick="document.location='HS.htm'" class="hs">AHAS KIRHS <br> HS building <br> Venues</button>
+            <button onclick="document.location='HS.htm'" class="hs">HS building <br> Venues</button>
 
-            <button onclick="document.location='IRK.htm'" class="irk">AHAS KIRHS <br> IRK building <br> Venues</button>
+            <button onclick="document.location='IRK.htm'" class="irk">IRK building <br> Venues</button>
 
             <button onclick="document.location='KOE.htm'" class="koe">KOE <br> Venues</button>
         </div>
