--- a/WebDesign/KICT.htm
+++ b/WebDesign/KICT.htm
@@ -11,11 +11,14 @@
             <img src="img/IIUM.svg" alt="IIUMlogo" id="titlelogo">
             <h1 id="title" style="text-align: left;">IIUM VMS</h1>
         </div>
-        
+
         <div class="mainbody">
+            <img src="img/KICT.png" alt="mainlogo" style="width: 20%;height: 10%;">
             <h1>KICT</h1>
             <p>Venue Management system for Kulliyyah of Information and Communication Technology.</p>
         </div>
+
+        
     </body>
 
 </html>
