--- a/WebDesign/KOED.htm
+++ b/WebDesign/KOED.htm
@@ -3,18 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-        <meta name="description" content="IRK Venue">
+        <meta name="description" content="KOED Venue">
         <link rel="stylesheet" href="web.css">
     </head>
-    <body onload="showVenue('IRK')">
+    <body onload="showVenue(' KOED')">
         <div id="home" onclick="document.location='index.html'">
             <img src="img/IIUM.svg" alt="IIUMlogo" id="titlelogo">
             <h1 id="title" style="text-align: left;">IIUM VMS</h1>
         </div>
 
         <div class="mainbody">
-            <h1>AHAS KIRKHS(IRK Building)</h1>
-            <p>Venue Management system for AHAS Kulliyyah of Islamic Revealed Knowledge and Human Science.</p>
+            <h1>KOED</h1>
+            <p>Venue Management system for Kulliyyah of Education.</p>
 
             <!--Show venues-->
             <div id="tabVenue" style="margin: 10px;display: inline;">
@@ -22,18 +22,18 @@
                 <p style="text-align: left;padding: 20px;background-color: white;color: black;">Please choose option:</p>
             </div>
             <div style="text-align: center;padding: 5%;">
-                <button class="book" onclick="newBook('IRK', 'book')">Book <br>Venue</button>
-                <button class="update" onclick="newBook('IRK','update')">Update <br> Booking</button>
-                <button class="cancel" onclick="newBook('IRK', 'cancel')">Cancel <br> Booking</button>
+                <button class="book" onclick="newBook(' KOED', 'book')">Book <br>Venue</button>
+                <button class="update" onclick="newBook(' KOED','update')">Update <br> Booking</button>
+                <button class="cancel" onclick="newBook(' KOED', 'cancel')">Cancel <br> Booking</button>
             </div>
             <div id="tabBook" class="bookingform">
                 <!--Display Option form.-->
             </div>
             <footer class="footer">
-                <p>IIUM Venue Management System</p>
-                <br>
-                <p>BIIT 1301 SEM 1 2024/2025</p>
-            </footer>
+               <p>IIUM Venue Management System</p>
+               <br>
+               <p>BIIT 1301 SEM 1 2024/2025</p>
+           </footer>
         </div>
         <script src="venue.js"></script>
     </body>
