--- a/WebDesign/KICT.htm
+++ b/WebDesign/KICT.htm
@@ -34,6 +34,9 @@
         <div id="tabBook" class="bookingform">
             <!--Display Option form.-->
         </div>
+        <div id="tabConfirmDeleted">
+            <!--Display confirm delete message-->
+        </div>
         
         <footer class="footer">
             <p>IIUM Venue Management System</p>
