--- a/WebDesign/index.html
+++ b/WebDesign/index.html
@@ -33,7 +33,7 @@
             <button onclick="document.location='KENMS.htm'" class="kenms">KENMS <br> Venues</button>
         </div>
         
-        <a href="test.htm">Redirect to test page.</a>
+        <!--<a href="test.htm">Redirect to test page.</a>-->
 
         <div>
             <footer class="footer">
