--- a/WebDesign/KENMS.htm
+++ b/WebDesign/KENMS.htm
@@ -29,6 +29,9 @@
             <div id="tabBook" class="bookingform">
                 <!--Display Option form.-->
             </div>
+            <div id="tabConfirmDeleted">
+                <!--Display confirm delete message-->
+            </div>
             <footer class="footer">
                <p>IIUM Venue Management System</p>
                <br>
